Fixed for java se:ee module missing. Added new example . Fixed unchecked warning